
* GeneWeb Service/CGI (gwd)
  - [02 Fev 00] In personal pages, relations are now displayed before notes.
  - [20 Jan 00] When sorting the children, use now the baptism date
    when there is no birth date.
  - [18 Jan 00] Fixed bug: when selecting no data base, the default page
    asks for a data base name, but in CGI mode when entering a data base,
    it did not work (incorrect URL).

* Base configuration files (base.gwf)
  - [25 Jan 00] Added variable "public_if_titles": if "yes", consider persons
    having nobility titles as public ("public" means that their private data
    is displayed even if their dates is less than 150 years). Warning: the
    default of this variable is "no": it is a behavior change in GeneWeb,
    relatively to previous versions (but don't worry: with this change, 
    private data is better protected).

* Lexicon (lang/lexicon.txt)
  - [01 Feb 00] Fixed some Swedish translations (Lars Gustavsson)
  - [26 Jan 00] Fixed several Portuguese translations (Jose Paulo Moitinho
    de Almeida).
  - [21 Jan 00] Changed the English displaying of dates into "day month
    year", the displaying "month day year" being specific to the United
    States and not used in other English speaking countries. American
    users are invited to change the lexicon line for (date) if they
    want an American display.    

* Documentation
  - [03 Feb 00] In chapter "modifications" (update.htm), section 1,
    added a footnote to explain that it is better to use western Europe
    languages encoding (iso-8859-1) for a person's "key".

GeneWeb version 3.02
--------------------

* Setup program (gwsetup)
  - [Dec 13, 99] Fixed another problem of images displaying with still
    another browser (see version 3.01).

* GeneWeb Service/CGI (gwd)
  - [Jan 12, 00] In adding or modifying family, added a specific field
    to indicate the source for (possibly) created persons.
  - [Jan 3, 00] Speeded up the displaying of anniversaries (noticeable on